--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<body>
+			<style type="text/css" href="style.css"></style>
+			<h1 class="title">SimpleXWebsite</h1>
+			<center>
+				<p>Currently Under Maintencance By SimpleXTeam</p>
+			</center>
+
+		</body>
+	</head>
+</html>
