--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<body>
 			<style type="text/css" href="style.css"></style>
 			<center>
-				<h1 class="title">SimpleXWebsite</h1>
+				<h1>SimpleXWebsite</h1>
 				<p>Currently Under Maintencance By SimpleXTeam</p>
 			</center>
 
