--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<body>
 			<script>
-				alert("iOS Exploit By SimpleXBelief56")
+				alert("iOS Webkit Exploit By SimpleXBelief56 & iShellCrack")
+				alert(navigator.uerAgent)
+				alert("Neither SimpleXBelief56 (Me) or iShellCrack take reponsibility for what ever happens to your device.")
 			</script>
 		</body>
 	</head>
