--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<body>
 			<script>
 				alert("iOS Webkit Exploit By SimpleXBelief56 & iShellCrack")
-				alert(navigator.uerAgent)
+				alert(navigator.userAgent)
 				alert("Neither SimpleXBelief56 (Me) or iShellCrack take reponsibility for what ever happens to your device.")
 			</script>
 		</body>
