--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				} else if(/Android/i.test(navgator.userAgent)){
 					var Device_type = "Android"
 				} else {
-					var Device_type = undefined
+					var Device_type = "undefined"
 				}
 				
 				var iOS = parseFloat(('' + (/CPU.*OS ([0-9_]{1,5})|(CPU like).*AppleWebKit.*Mobile/i.exec(navigator.userAgent) || [0,''])[1]).replace('undefined', '3_2').replace('_', '.').replace('_', '')) || false;
