--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 				alert(navigator.userAgent)
 				alert("Neither SimpleXBelief56 (Me) or iShellCrack take reponsibility for what ever happens to your device.")
 				
-				if(/iPhone/i.test(navgator.userAgent)){
-					var Device_type = "iPhone"
-				} else if(/iPad/i.test(navigator.userAgent)){
-					var Device_type = "iPad"
-				} else if(/Android/i.test(navgator.userAgent)){
-					var Device_type = "Android"
-				} else {
-					var Device_type = "undefined"
-				}
+// 				if(/iPhone/i.test(navgator.userAgent)){
+// 					var Device_type = "iPhone"
+// 				} else if(/iPad/i.test(navigator.userAgent)){
+// 					var Device_type = "iPad"
+// 				} else if(/Android/i.test(navgator.userAgent)){
+// 					var Device_type = "Android"
+// 				} else {
+// 					var Device_type = "undefined"
+// 				}
 				
 				var iOS = parseFloat(('' + (/CPU.*OS ([0-9_]{1,5})|(CPU like).*AppleWebKit.*Mobile/i.exec(navigator.userAgent) || [0,''])[1]).replace('undefined', '3_2').replace('_', '.').replace('_', '')) || false;
 
