--- a/SimpleXWebkit.html
+++ b/SimpleXWebkit.html
@@ -38,7 +38,7 @@
 
                         if(AllocValue == 1){
                             document.getElementById("S").innerHTML = "Checking iOS Version";
-                            if(iOSVersionString !== "11.4.1" || iOSVersionString !== "11.4"){
+                            if(iOSVersionString !== "11.4"){
                                 AllocID.value = 1;
                                 document.getElementById("S").innerHTML = "SpawnWebkitExploit(): Failed! -> " + iOSVersion
                                 console.log("Exploit Failed! -> ERRROR(Version > 11.4.1)")
