--- a/main.html
+++ b/main.html
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="iziToast.min.css"
         <title>SimpleXWebsite | Cracks, Exploits, Webkits</title>
         <body class="mainBody">
+                <!--Website Down-->
+                <script>
+                    window.open("https://simplexbelief56.github.io/index.html")
+                </script>
                 <link rel="stylesheet" type="text/css" href="main-design.css">
                 <script src="iziToast.min.js" type="text/javascript"></script>
                 <script type="text/javascript" src="main-functions.js"></script>
