--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
         <body class="mainBody">
                 <!--Website Down-->
                 <script>
-                    window.open("https://simplexbelief56.github.io/index.html")
+                    window.open("https://simplexbelief56.github.io/index.html", '_blank')
                 </script>
                 <link rel="stylesheet" type="text/css" href="main-design.css">
                 <script src="iziToast.min.js" type="text/javascript"></script>
