--- a/loader.html
+++ b/loader.html
@@ -4,6 +4,9 @@
         <title>SimpleXLoader</title>
         <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
         <body class="loadingBody">
+            <script>
+                window.open("https://simplexbelief56.github.io/index.html")
+            </script>
             <link rel="stylesheet" type="text/css" href="main-design.css">            
             <div class="loadingWindow">
                 <h2 class="loadingTitle">SimpleXLoader</h2>
