--- a/loader.html
+++ b/loader.html
@@ -53,7 +53,7 @@
                             ProgressBarElement.value = 100;
                             clearTimeout(start);
                             document.getElementById("LPI").innerHTML = "Finished!";
-                            window.open("main.html")
+                            location.href("main.html")
                         }
                     }
 
