Added "__self" -> Line {84}

--- a/loader.html
+++ b/loader.html
@@ -81,7 +81,7 @@
                     progressBarFunction(amountLoaded);
 
                     function launchWebsite(){
-                        window.open("https://simplexbelief56.github.io/main.html")
+                        window.open("https://simplexbelief56.github.io/main.html", "_self")
                     }
                     
                 </script>
