iOS Web Configuration

--- a/loader.html
+++ b/loader.html
@@ -3,6 +3,7 @@
     <head>
         <title>SimpleXLoader</title>
         <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <body class="loadingBody">
             <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
             <!-- <script>
