--- a/device.html
+++ b/device.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <title>SimpleXWebsite | Device Info</title>
         <body class="deviceBody">
             <link rel="stylesheet" type="text/css" href="main-design.css">
