--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
                 <ul class="nav-bar">
                     <li><a onclick='devicePage()'>Home</a></li>
                     <li><a href="SimpleXWebkit.html">SimpleXWebkit</a></li>
-                    <li><a href="device.html">Device Info</a></li>
+                    <li><a onclick='devicePage()'>Device Info</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
                 <script>
